# spelunk-bench

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  LABELING.md  PLAN.md
src/spelunk_bench/: __init__.py  cli.py  consistency.py  corpus.py  queries.py
tests/: test_cli.py  test_cli_m2.py  test_consistency.py  test_corpus.py  test_queries.py
